# carsharing-opt-experiments

./: .env.example  .gitignore  README.md  config.py  create_sample_data.py  main.py  pyproject.toml  run_fleetmanager_optimisation.py  run_genetic_algorithm_cpu_topography.py  run_service_designer_experiment.py  run_task_consumer.sh  settings.py
core/db/: data_access_facade_basic.py  purge_common.py  purge_local.py  raw_data_access.py
core/demand/: blur_demand.py  demand_prediction.py  historical_demand.py
core/directions/: historical_directions.py
core/distances_and_times/: distance_time_modification.py  get_dist_time_here_matrices.py
core/tasks/: data_preparation.py  distance_time_modification.py
core/utils/: id_to_index_mapper.py  nptools.py  request_helpers.py  values_formatter.py
fleet_manager/data_model/: config_models.py  genetic_model.py  zone_model.py
fleet_manager/fastsimulator/: _fast_simulator.pyx  demand_realization.py  direction_realization.py  fast_simulator.py
fleet_manager/genetic_algorithm/: augmented_pmx.py  carcinogener.py  connection_topography.py  genetic_controller_parallel.py  (+5 more)
helpers/: assign_cell_ids_to_rents.py  create_sample_configs.py
prepare_zone_spatial_data/: README.md  prepare_zone_0_create_roads.py  prepare_zone_1_make_zone.py  prepare_zone_2_fix_zone.py  prepare_zone_3_add_addresses.py  prepare_zone_4_get_dist_time_matrices.py  prepare_zone_5_clean_temp_files.py  prepare_zone_6_check_snapping_points.py  zone_creator_config.py  zone_creator_config.py.example
service_designer/: create_sample_configs.py  tools.py
(+20 files in other folders)
